WebCore/accessibility/AccessibilitySlider.h
@@ -41,28 +41,29 @@ public:
     static PassRefPtr<AccessibilitySlider> create(RenderObject*);
     virtual ~AccessibilitySlider() { }
 
-    virtual AccessibilityRole roleValue() const { return SliderRole; }
-
-    virtual bool isSlider() const { return true; }
-
-    virtual const AccessibilityChildrenVector& children();
-    virtual void addChildren();
-
-    virtual bool canSetValueAttribute() const { return true; }
-    const AtomicString& getAttribute(const QualifiedName& attribute) const;
-
-    virtual void setValue(const String&);
-    virtual float valueForRange() const;
-    virtual float maxValueForRange() const;
-    virtual float minValueForRange() const;
-    virtual AccessibilityOrientation orientation() const;
-
 protected:
     AccessibilitySlider(RenderObject*);
 
 private:
     HTMLInputElement* element() const;
     virtual bool accessibilityIsIgnored() const;
+    virtual AccessibilityObject* doAccessibilityHitTest(const IntPoint&) const;
+
+    virtual AccessibilityRole roleValue() const { return SliderRole; }    
+    virtual bool isSlider() const { return true; }
+    virtual bool isInputSlider() const { return true; }
+    
+    virtual const AccessibilityChildrenVector& children();
+    virtual void addChildren();
+    
+    virtual bool canSetValueAttribute() const { return true; }
+    const AtomicString& getAttribute(const QualifiedName& attribute) const;
+    
+    virtual void setValue(const String&);
+    virtual float valueForRange() const;
+    virtual float maxValueForRange() const;
+    virtual float minValueForRange() const;
+    virtual AccessibilityOrientation orientation() const;    
 };
 
 class AccessibilitySliderThumb : public AccessibilityObject {
